[package]
name = "ph00"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.40"
tokio = { version = "1.24.2", features = ["rt", "macros", "io-util", "net"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
