[package]
name = "ph01"
version = "0.1.0"
edition = "2021"

[dependencies]
is_prime = "2.0.9"
primes = "0.4.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = { version = "1.0.127", features = ["arbitrary_precision"] }
thiserror = "1.0.63"
tokio = { version = "1.40.0", features = ["rt", "macros", "io-util", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
