[package]
name = "ph03"
version = "0.1.0"
edition = "2021"

[dependencies]
nutype = { version = "0.5.0", features = ["regex"] }
regex = "1.11.0"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["sync", "time", "macros", "rt-multi-thread", "io-util", "net"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
